<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>drake</name>
  <version>0.0.0</version>
  <description>
    Model-Based Design and Verification for Robotics.
  </description>
  <maintainer email="drake-users@mit.edu">Drake Users</maintainer>
  <license>BSD</license>
  <!-- Missing debian dependencies in rosdistro
   - libg-dev (installed indirectly by opengl)
   - libglx-dev (installed indirectly by qtbase5-dev)
   - libmumps-seq-dev (installed indirectly, dependecy of coinor-libipopt-dev)
   - patch (core dependency for any jammy system)
   - python3-all-dev (equivalent to python3-dev)
      Deb packages depends:
        - python3 (python3-dev rosdep)
        - libpython3-all-dev (python3-dev rosdep via libpython3-dev dep)
        - python3-all:
          Deb packages depends:
           - python3 (python3-dev rosdep)
           - python3-distutils (python3-dev rosdep)
        - python3-dev (python3-dev rosdep)
        - python3.8-dev (python3-dev rosdep)
   Need new submission:
   - libjchart2d-java [CRITICAL]
   - patchelf [CRITICAL]
  -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>
  <buildtool_depend>clang</buildtool_depend>
  <buildtool_depend>eigen</buildtool_depend>
  <buildtool_depend>file</buildtool_depend>
  <buildtool_depend>gfortran</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>
  <buildtool_depend>nasm</buildtool_depend>
  <buildtool_depend>opencl-headers</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>coinor-libipopt-dev</depend>
  <depend>java</depend>
  <depend>libclang-dev</depend>
  <depend>libglib-dev</depend>
  <depend>liblapack-dev</depend>
  <depend>libx11-dev</depend>
  <depend>ocl-icd-opencl-dev</depend>
  <depend>opengl</depend>
  <depend>python3-dev</depend>
  <depend>python3-distutils</depend>
  <depend>python3-matplotlib</depend>
  <depend>qtbase5-dev</depend>
  <depend>zlib</depend>
</package>
